同步相关问题调整